--- a/StoryStore/appsettings.json
+++ b/StoryStore/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "Default": "Server=AHMETPC\\SQLEXPRESS;Database=StoryStoreDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "Default": "Server=DESKTOP-IM8ND7R\\SQLEXPRESS01;Database=StoryStoreDb;Trusted_Connection=True;MultipleActiveResultSets=true"
 
   },
   "AllowedHosts": "*"
